--- a/Index.html
+++ b/Index.html
@@ -14,13 +14,22 @@
 
 <BODY>
 
-    <h2>People</h2>
+    <h2>Tafels</h2>
     <div id="main">
-        <ul data-bind="foreach: computations">
-            <li>
-                <span data-bind="text: number"></span>
-            </li>
-        </ul>
+        <form class="form-horizontal" data-bind="foreach: table.computations">
+            <div class="alert"data-bind="class: calculationStatus"  role="alert">
+                
+            <div class="form-group">
+                <label data-bind="text: question" class="control-label col-sm-2" for="answer"></label>
+                <div class="col-sm-10">
+                    <input data-bind='value: answer' type="text" class="form-control" id="answer"
+                        placeholder="antwoord">
+                </div>
+            </div>
+        </div>
+        </form>
+
+
     </div>
 
 </BODY>
