In carousel with random

--- a/Index.html
+++ b/Index.html
@@ -16,23 +16,47 @@
 
     <h2>Tafels</h2>
     <div id="main">
-        <form class="form-horizontal" data-bind="foreach: table.computations">
-            <div class="alert"data-bind="class: calculationStatus"  role="alert">
-                
-            <div class="form-group">
-                <label data-bind="text: question" class="control-label col-sm-2" for="answer"></label>
-                <div class="col-sm-10">
-                    <input data-bind='value: answer, hasfocus: isCurrentQuestion()' 
-                    type="text" class="form-control" id="answer"
-                        
-                    placeholder="antwoord">
+
+        <div id="carouselExampleControls" class="carousel carousel-dark " data-bs-ride="false">
+            <div class="carousel-inner">
+                <div data-bind="foreach: { data: data.tables, as: 'table' }">
+
+                    <div class="carousel-item" data-bind="css: { active: table.isActiveComputation() }">
+                        <div class="d-block w-100" >
+
+                            <div style="padding-left: 20%; padding-right: 20%;">
+                            <h1 data-bind="text: baseValue"></h1>
+                            <form class="form-horizontal" data-bind="foreach: table.computations">
+                                <div class="alert" data-bind="class: calculationStatus" role="alert">
+
+                                    <div class="form-group">
+                                        <label data-bind="text: question" class="control-label col-sm-2"
+                                            for="answer"></label>
+                                        <div class="col-sm-10">
+                                            <input data-bind='value: answer, hasfocus: isCurrentQuestion()' type="text"
+                                                class="form-control" id="answer" placeholder="antwoord">
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
+
         </div>
-        </form>
-
-
-    </div>
 
 </BODY>
 
